# CommandLine

./: .gitignore  .gitmodules  CONTRIBUTE.md  CONTRIBUTING.md  CONTRIBUTING_zh_CN.md  Cargo.toml  LICENSE  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  README_zh_CN.md  Registry.toml  build.rs  deploy.ps1  deploy.sh  dev_deploy.ps1  dev_deploy.sh  export.ps1  export.sh  gen.rs  publish.sh  rust-analyzer.toml
.cargo/: config.toml  registry.toml
.github/workflows/: deploy.yml
crates/build_helper/: Cargo.toml
crates/cli_publisher/src/: main.rs
docs/: 构想.md
locales/: en.yml  zh-CN.yml
locales/help_docs/: en.yml  zh-CN.yml
macros/cmd_system_macros/: Cargo.toml
macros/cmd_system_macros/src/: lib.rs
macros/comp_system_macros/: Cargo.toml
macros/comp_system_macros/src/: lib.rs
macros/helpdoc_system_macros/: Cargo.toml
macros/helpdoc_system_macros/src/: lib.rs
macros/render_system_macros/: Cargo.toml
macros/render_system_macros/src/: lib.rs
resources/helpdoc/: Welcome_To_JVCS.en.md  Welcome_To_JVCS.zh-CN.md  commands.en.md  commands.zh-CN.md  environments.en.md  environments.zh-CN.md
resources/helpdoc/commands/: helpdoc.en.md  helpdoc.zh-CN.md  hexdump.en.md  hexdump.zh-CN.md  sheetdump.en.md  sheetdump.zh-CN.md  sheetedit.en.md  sheetedit.zh-CN.md  version.en.md  version.zh-CN.md  workspace.en.md  workspace.zh-CN.md
resources/helpdoc/commands/workspace/: alias.en.md  alias.zh-CN.md  create.en.md  create.zh-CN.md  here.en.md  here.zh-CN.md  init.en.md  init.zh-CN.md  sheet.en.md  sheet.zh-CN.md
resources/locales/: en.yml  zh-CN.yml
resources/locales/jvn/: en.yml  zh-CN.yml
resources/locales/jvn/helpdoc_viewer/: en.yml  zh-CN.yml
resources/locales/legacy/: en.yml
resources/other/: jvn_comp_help.txt
scripts/: cli.sh  completion_jv.ps1  completion_jv.sh  completion_jvv.sh  hide_ignored_file.ps1  inst.sh  installation.sh  jv_cli.ps1  jv_cli.sh  jv_completion.ps1  make_lnk.ps1  make_lnk.sh
scripts/completions/bash/: completion_jv.sh
scripts/completions/powershell/: completion_jv.ps1
scripts/deploy/: jv_cli.ps1  jv_cli.sh  jvn.ps1  jvn.sh  jvn_bash.sh  jvn_fish.fish  jvn_powershell.ps1  jvn_zsh.zsh
scripts/deploy/completions/: bash.sh  fish.fish  powershell.ps1  zsh.sh  zsh.zsh
scripts/deploy/legacy_zsh_support/: jvcs.plugin.zsh
scripts/deploy/zsh_support/: install.sh  jvcs.plugin.zsh
scripts/dev/: .gitignore  deploy.ps1  deploy.sh  dev_deploy.ps1  dev_deploy.sh
scripts/setup/linux/: inst.sh
scripts/setup/windows/: post_inst.ps1  post_uninst.ps1
scripts/zsh_support/: how_to_install.md  jvcs.plugin.zsh
setup/linux/: inst.sh
setup/windows/: inst.ps1  setup_jv_cli_template.iss
src/: cmd.rs  cmds.rs  data.rs  lib.rs  macros.rs  output.rs  renderers.rs  subcmd.rs  systems.rs  utils.rs
src/arguments/: status.rs
src/cmd/: cmd_system.rs  errors.rs  processer.rs  renderer.rs  renderers.rs
src/cmd/cmds/: status.rs  template.rs
src/cmd/renderers/: json_renderer.rs
src/cmds/: README.md  README_zh_CN.md  status.rs
src/cmds/arg/: empty.rs  helpdoc.rs  path.rs  sheetdump.rs  sheetedit.rs  single_file.rs  status.rs  storage_build.rs  storage_write.rs  version.rs  workspace_alias.rs  workspace_sheet.rs
src/cmds/cmd/: helpdoc.rs  helpdoc_list.rs  hexdump.rs  sheetdump.rs  sheetedit.rs  status.rs  storage_build.rs  storage_write.rs  version.rs  workspace.rs  workspace_alias.rs  workspace_create.rs  workspace_here.rs  workspace_init.rs  workspace_sheet.rs
src/cmds/collect/: compile_info.rs  empty.rs  sheetdump.rs  single_file.rs  status.rs  workspace.rs
src/cmds/comp/: helpdoc.rs  sheetdump.rs  sheetedit.rs  version.rs  workspace_alias.rs  workspace_sheet.rs
src/cmds/converter/: make_sheet_error.rs  read_sheet_data_error.rs  space_error.rs  version_in_out.rs  workspace_operation_error.rs
src/cmds/in/: empty.rs  helpdoc.rs  sheetdump.rs  sheetedit.rs  status.rs  storage_rw.rs  version.rs  workspace_alias.rs  workspace_create.rs  workspace_sheet.rs
src/cmds/renderer/: alias_query.rs  helpdocs.rs  hex.rs  json.rs  json_pretty.rs  mappings.rs  mappings_pretty.rs  none.rs  path.rs  status.rs  string_vec.rs  version.rs
src/collects/: status.rs
src/data/: compile_info.rs  compile_info.rs.template  ipaddress_history.rs
src/inputs/: status.rs
src/legacy_json_output/: accounts.rs  align.rs  here.rs  info.rs  share.rs  sheets.rs
src/macros/: command_flag.rs
src/output/: accounts.rs  align.rs  analyzer_result.rs  here.rs  share.rs  sheets.rs
src/outputs/: status.rs
src/renderers/: status.rs
src/subcmd/: cmd.rs  cmds.rs  errors.rs  processer.rs  renderer.rs
src/subcmd/cmds/: status.rs
src/systems/: cmd.rs  comp.rs  debug.rs  helpdoc.rs  render.rs
src/systems/cmd/: cmd_system.rs  errors.rs  macros.rs  processer.rs  renderer.rs  workspace_reader.rs
src/systems/comp/: context.rs  result.rs
src/systems/debug/: verbose_logger.rs
src/systems/helpdoc/: helpdoc_viewer.rs
src/systems/render/: render_system.rs  renderer.rs
src/utils/: build_env_logger.rs  display.rs  env.rs  globber.rs  input.rs  lang_selector.rs  levenshtein_distance.rs  logger.rs  md_colored.rs  socket_addr_helper.rs  sort.rs  workspace_reader.rs
templates/: _commands.rs.template  _comps.rs.template  _override_renderer_dispatcher.rs.template  _override_renderer_entry.rs.template  _override_renderers.rs.template  _registry.rs.template  _specific_renderer_matching.rs.template  command.rs.template  compile_info.rs.template  renderer_list.rs.template  renderer_list.txt  setup_jv_cli.iss  setup_jv_cli.iss.template
tools/build_helper/: Cargo.toml
utils/: Cargo.toml
utils/src/: display.rs  env.rs  globber.rs  input.rs  lazy_macros.rs  lib.rs  logger.rs  macros.rs  math.rs  push_version.rs  socket_addr_helper.rs
utils/src/display/: colorful.rs  markdown.rs  pager.rs  str_width.rs  table.rs
utils/src/env/: editor.rs  helpdoc.rs  locales.rs  pager.rs
utils/src/input/: confirm.rs  editor.rs
utils/src/legacy/: display.rs  env.rs  fs.rs  globber.rs  input.rs  logger.rs
utils/src/math/: levenshtein_distance.rs
(+29 files in other folders)
