[package]
name = "just_enough_vcs_cli"
edition = "2024"
build = "build.rs"
authors = ["JustEnoughVCS Team"]
homepage = "https://github.com/JustEnoughVCS/CommandLine/"

[workspace]
members = [
    "utils/",
    "tools/build_helper",
    "macros/render_system_macros",
    "macros/cmd_system_macros"
]

[workspace.package]
version = "0.1.0-dev"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
codegen-units = 64
incremental = true
lto = false
panic = "unwind"

[profile.release]
opt-level = "z"
debug = false
split-defoinfo = "off"
codegen-units = 1
incremental = false
lto = "thin"
panic = "abort"
strip = true

[build-dependencies]
just_fmt = "0.1.2"

tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
chrono = "0.4"
toml = "0.9"
regex = "1.12"

[dependencies]
# Just Enough VCS
just_enough_vcs = { path = "../VersionControl", features = ["all"] }

# RenderSystem Macros
render_system_macros = { path = "macros/render_system_macros" }

# CommandSystem Macros
cmd_system_macros = { path = "macros/cmd_system_macros" }

# CommandLine Utilities
cli_utils = { path = "utils" }

# Error
thiserror = "2.0.17"

# Serialize
# What the heck, why does this crate use kebab-case instead of snake_case ????
erased_serde = { package = "erased-serde", version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ron = "0.11.0"
toml = "0.9"

# Command Line
clap = { version = "4.5", features = ["derive"] }

# Time
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Async
tokio = { version = "1", features = ["full"] }

# Display
colored = "3.0"

# Terminal
crossterm = "0.27"

# i18n
rust-i18n = "3"

# File & Directory
walkdir = "2.5.0"

# String format
just_fmt = "0.1.2"
