[package]
name = "just_enough_vcs_cli"
edition = "2024"
build = "build.rs"
authors = ["JustEnoughVCS Team"]
homepage = "https://github.com/JustEnoughVCS/CommandLine/"

[workspace]
members = [
    "utils/",
    "tools/build_helper",
    "macros/render_system_macros",
    "macros/cmd_system_macros",
]

[workspace.package]
version = "0.1.0-dev"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
codegen-units = 64
incremental = true
lto = false
panic = "unwind"

[profile.release]
opt-level = "z"
debug = false
split-defoinfo = "off"
codegen-units = 1
incremental = false
lto = "thin"
panic = "abort"
strip = true

[build-dependencies]
just_fmt = "0.1.2"

tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
chrono = "0.4"
toml = "0.9"
regex = "1.12"
just_template = "0.1.0"

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
just_fmt = "0.1.2"
crossterm = "0.29"
colored = "3.1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dependencies]
cli_utils = { path = "utils" }
cmd_system_macros = { path = "macros/cmd_system_macros" }
just_enough_vcs = { path = "../VersionControl", features = ["all"] }
render_system_macros = { path = "macros/render_system_macros" }

crossterm.workspace = true
env_logger.workspace = true
just_fmt.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true

chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored.workspace = true
just_progress = "0.1.1"
ron = "0.11.0"
rust-i18n = "3"
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
walkdir = "2.5.0"
