[package]
name = "cli_utils"
edition = "2024"
version.workspace = true

[dependencies]
just_enough_vcs = { path = "../../VersionControl", features = ["all"] }

colored.workspace = true
crossterm.workspace = true
env_logger.workspace = true
just_fmt.workspace = true
log.workspace = true

chrono = "0.4"
dirs = "6.0.0"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1", features = ["fs", "io-std", "net"] }
